0x0F-function_pointers/3-main.c:12:48:
nt main(int __attribute__((__unused__)) argc, *char *argv[])
      |                                                ^
3-main.c:19:10: error: unknown escape sequence: '\m' [-Werror]
   19 |   printf("Error\m");
      |          ^~~~~~~~~cle
